welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: ';' expected but 'else' found.
;(x>0) {return false} else {return true}		if(estSurBiscuit) {x=x+1}
                      ^